--- a/casasr/index.html
+++ b/casasr/index.html
@@ -21,7 +21,7 @@
             <h3>Systems Thinking, Linear Thinking, and Why Models Matter in Complex Systems</h3>
 
 <p>
-When people talk about systems thinking, it often gets framed as something abstract or overly theoretical, but in practice it is much more concrete than that. Systems thinking, in my own words, is the ability to see the entire lifecycle of something from start to finish and understand how every decision, detail, and interaction contributes to the final outcome. It is cradle-to-grave thinking. That means not just focusing on what a system does, but how it is built, who it is built for, how people will actually use it, and how today’s choices create consequences later that circle back in ways that are easy to miss if you are only focused on the task in front of you.
+When people talk about systems thinking, it often gets framed as something abstract or overly theoretical, but in practice it is much more concrete than that. Systems thinking, in my own words, is the ability to see the entire lifecycle of something from start to finish and understand how every decision, detail, and interaction contributes to the final outcome. It is cradle-to-grave thinking. That means not just focusing on what a system does, but how it is built, who it is built for, how people will actually use it. 
 </p>
 
 <p>
@@ -75,71 +75,69 @@ International Council on Systems Engineering. (2022). <em>INCOSE vision 2035</em
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
-<body>
 
+         <!-- Module 2.1 Blog Post Starts here -->
 <article>
-    <h1>Life Cycle Models: Human Frameworks That Shape More Than Just Projects</h1>
+    <header>
+        <h1>Human Centered Design, Perception, and Early Usability Decisions</h1>
+    </header>
 
-    <p>Life cycle models are the invisible architecture of project work. They guide not just technical tasks but the actual human experience of being on a project. They quietly dictate the pace, the atmosphere, and the nature of collaboration within a team. When a systems engineer picks a life cycle model, it isn’t simply a technical or procedural choice. It is a decision that shapes communication patterns and determines when and how errors surface. These models become the social scaffolding of a project. They influence how people relate to each other, how much uncertainty they can tolerate, and which behaviors are rewarded or punished (Holt & Weilkiens, 2023).</p>
+    <section>
+        <p>Human centered design is grounded in the belief that products work best when they respect the way people think, perceive, move, and make decisions. This idea appears simple at first. Designers should understand users and create systems that align with real behavior rather than assumptions. The readings in this module expand this idea into a detailed picture of what it means to design with people in mind. Perception, attention, memory, physical ability, and familiarity all shape how users experience an interface. Early decisions in the design process determine whether a product grows into something intuitive or becomes a structure filled with friction (ISO, 2018; IDEO, 2015).</p>
 
-    <p>A systems engineer’s job stretches far beyond managing schedules, budgets, and specs. They are stewards of human dynamics over long timelines. Teams may work together for years, and the life cycle model they adopt will set the tone for how that journey is experienced. It affects how people cope with setbacks, where they direct their anxieties, and how they respond to the unknown. Holt and Weilkiens (2023) describe the three main models that help manage this complexity: linear, iterative, and incremental. Each serves a different human purpose, balancing predictability, learning, and delivery of value.</p>
+        <p>The readings connect psychological principles with practical design choices. ISO 9241-210 provides a structured process for understanding users and evaluating design solutions. The IDEO Field Guide promotes mindsets that help designers stay flexible and curious. UX laws, including Jakob’s Law, Fitts’s Law, Hick’s Law, and Miller’s Law, translate human tendencies into design patterns. Together, these ideas demonstrate that designing for people requires both discipline and sensitivity. Users bring expectations and limitations with them, and designers need to support those tendencies rather than fight against them.</p>
+    </section>
 
-    <h2>The Linear Model and the Human Need for Predictability</h2>
+    <section>
+        <h2>Perception and the Role of Familiarity</h2>
+        <p>Perception is the earliest point of contact between a user and an interface. Before users decide what to do or how to interact, they see the structure in front of them. Perception is not passive. It is influenced by prior experience and shaped by familiar patterns. Jakob’s Law explains that users expect new systems to function like systems they already know (Nielsen, 1994). Users carry mental models from past interactions, and they depend on these models to make sense of what they see.</p>
+        <p>A designer who ignores this reality creates immediate friction. A designer who recognizes it gains a powerful advantage. When users encounter buttons, menus, layouts, or navigation structures that resemble what they have used before, they operate without hesitation. Their brains match what they see to what they already understand. This alignment reduces cognitive load and makes the interface feel comfortable.</p>
+    </section>
 
-    <p>The traditional linear model caters to a deep human need for order. It offers a reassuring sense of progress where each phase is finished before the next begins. This structure is comforting in high-stakes environments where uncertainty can trigger anxiety. People can focus on their roles, confident there is a master plan guiding the whole (Holt & Weilkiens, 2023).</p>
+    <section>
+        <h2>Attention and the Limits of Human Focus</h2>
+        <p>Attention is another foundational factor. Users rarely carefully read or evaluate every element on a page. They scan, glance, and make quick assumptions about what matters. Designers must work with these tendencies. If the design demands more attention than users naturally give, the experience becomes tiring or confusing.</p>
+        <p>Fitts’s Law describes the relationship between the size of a target, the distance to the target, and the time it takes to select it (Fitts, 1954). A small button that requires precision forces users to focus more intensely. A distant or tightly spaced target introduces extra effort, which also demands attention. When designers create buttons that are large enough and spaced appropriately, users do not need to concentrate as heavily to complete simple actions.</p>
+        <p>Hick’s Law focuses on cognitive decision-making (Hick, 1952). When users face many choices, the time required to make a decision increases. The brain naturally evaluates each option, even briefly. If the number of choices is overwhelming, decision-making slows. Designers can support attention by reducing unnecessary choices, grouping related items, and prioritizing relevant options.</p>
+    </section>
 
-    <p>But beneath this sense of control lies a real human risk. Early decisions are locked in, rarely revisited, making it difficult to adapt when new information arises. When problems appear late, blame often falls on the people who made the initial assumptions, rather than acknowledging the unpredictability of complex systems. The culture can become hostile to change, which encourages risk aversion and hiding mistakes. For some teams, linear offers stability; for others, it creates fear around adaptation.</p>
+    <section>
+        <h2>Memory and Cognitive Load</h2>
+        <p>Memory plays a central role in usability. Miller’s Law highlights the limits of short-term memory. Users can hold only a small number of items at once (Miller, 1956). This limitation affects how much information users can absorb, understand, and remember while navigating an interface.</p>
+        <p>Memory is supported by structure. Users understand and remember information more easily when it is grouped into meaningful chunks. Designers cannot assume users will remember everything. Clear categories, logical hierarchies, and consistent labeling reduce cognitive load. Following Miller’s Law results in interfaces that feel organized and manageable.</p>
+    </section>
 
-    <p>The social cost shows up in the silos it builds. Communication becomes transactional rather than collaborative. People focus narrowly on their phase and overlook the bigger system. When the project hits a wall, fingers point backward, and trust erodes. That erosion can harm an organization more than any technical failure.</p>
+    <section>
+        <h2>The Structure of ISO 9241-210</h2>
+        <p>ISO 9241-210 provides a structured process for human centered design (ISO, 2018). The standard outlines a cycle that includes understanding the context of use, identifying user needs, creating design solutions, and evaluating those solutions through feedback. This cycle repeats until the design fulfills user requirements.</p>
+        <p>Context is essential. Context includes not only physical location but also user tools, goals, and constraints. Designers should understand whether users are multitasking, distracted, or under time pressure. Evaluation with real users helps reveal usability problems early, making corrections easier before the structure becomes too rigid.</p>
+    </section>
 
-    <h2>The Iterative Model and the Psychology of Learning</h2>
+    <section>
+        <h2>IDEO Mindsets and Human Approaches</h2>
+        <p>While ISO 9241-210 focuses on process, the IDEO Field Guide emphasizes mindset (IDEO, 2015). Empathy encourages designers to understand users by stepping into their experiences. Curiosity pushes designers to explore, question, and observe. Iteration helps designers revise ideas based on feedback. A willingness to learn from failure prevents rigidity. These mindsets complement the formal process and ensure designs remain human-centered.</p>
+    </section>
 
-    <p>By contrast, the iterative model accepts that no one knows everything at the start. It assumes systems—and the people building them—evolve through cycles of trial and error. It normalizes uncertainty by making it clear that assumptions will be tested and revised. Teams are encouraged to admit gaps and to learn from both wins and failures. Culture shifts from judging people for mistakes to celebrating those who help the group eventually succeed (Edmondson, 1999).</p>
+    <section>
+        <h2>Why Early Decisions Matter</h2>
+        <p>Early usability decisions shape the entire product. Information architecture, navigation structure, layout, and interaction patterns are usually established early. Once these decisions are made, they influence all subsequent design choices. Poor early decisions create problems that become harder to fix over time. Aligning early decisions with Jakob’s Law, Fitts’s Law, Miller’s Law, and Hick’s Law reduces friction, creates clarity, and supports usability from the start.</p>
+    </section>
 
-    <p>This creates psychological safety. Edmondson (1999) defines it as the shared belief that a team is safe for interpersonal risk taking. In iterative environments, a failed test is data, not disaster. This enables real innovation, because people feel safe to propose creative or unconventional ideas. Iteration does demand emotional resilience. Progress can feel uneven, and the lack of clear endpoints frustrates those who crave closure. Leaders must maintain momentum even when the path forward is unclear.</p>
+    <section>
+        <h2>Closing Reflection</h2>
+        <p>Human centered design is built on the belief that design should respect how people think, perceive, and act. Effective design grows from an understanding of perception, attention, memory, and physical behavior. Early usability decisions are critical. They anchor the structure of a product and determine whether it is intuitive or frustrating. The readings demonstrate that design succeeds when it aligns with human behavior from the beginning. Perception guides understanding. Attention governs focus. Memory supports navigation. Physical interaction shapes ease of use. Every stage benefits when users remain at the center of the process.</p>
+    </section>
 
-    <h2>The Incremental Model and the Management of Value</h2>
-
-    <p>Incremental focuses on delivering tangible results in stages, which builds trust through visible progress. Stakeholders see functioning pieces early and often, reducing anxiety and making feedback integral rather than late-stage. Users become co-creators, shaping the system as it develops (Alami & Ernst, 2024).</p>
-
-    <p>Breaking work into chunks makes failure less catastrophic. Mistakes are smaller and easier to understand. Teams feel ownership, reinforcing that the system serves people, not the other way around. This approach is particularly useful when user needs are evolving. Frequent wins keep morale high. Instead of waiting years for results, the team gets small victories every few months.</p>
-
-    <h2>A Reflection on the Academic Life Cycle</h2>
-
-    <p>Sitting here in my final quarter, I notice how much these models apply to my own life. This degree has felt like a massive linear project. I set my "requirements" four years ago when I picked this major, and I’ve moved through the phases ever since. But humans aren’t static systems. My interests and understanding of the world have shifted, yet the academic life cycle rarely allows a pivot.</p>
-
-    <p>I wonder if higher education could benefit from a more iterative approach. We are forced to commit before truly understanding the "system" we’re entering. By graduation, we often realize our initial career design was based on incomplete data. This creates stress. We are expected to deliver a perfect "system" of a career without prototyping or incremental testing. The same humans who struggle with rigid educational cycles will go on to manage engineering projects. If we can’t handle our own life cycles flexibly, we’ll struggle to do it for our teams.</p>
-
-    <h2>The Deep Reality of Accountability Distribution</h2>
-
-    <p>Life cycle models also shape accountability, both professional and emotional. Alami and Ernst (2024) distinguish institutionalized and grassroots accountability. Institutionalized accountability comes from formal processes like reviews and milestones, common in linear models. It relies on carrots and sticks and often fosters a culture of fear.</p>
-
-    <p>Grassroots accountability arises organically, driven by peers and intrinsic commitment. Iterative and incremental models foster this, requiring constant collaboration. In short cycles, you cannot hide behind a document. You are accountable to the person next to you. Focus shifts from "who messed up" to "how do we fix this together." This shared responsibility is far healthier long-term than the looming single deadline of a waterfall model.</p>
-
-    <h2>The Ethical Dimension: Responsibility and Fairness</h2>
-
-    <p>Choosing a life cycle model has ethical implications. It can shield people from unrealistic expectations or set them up for impossible ones. It decides who bears the impact when circumstances change. Are risks shared fairly, or does one person absorb most consequences? Do people have agency, or are they blindsided by surprises?</p>
-
-    <p>A responsible systems engineer asks not just if a model delivers the project, but if it treats people justly. A rigid linear approach in a high-uncertainty project is arguably unethical. It forces a team to follow a plan everyone knows is flawed. A good engineer balances stakeholder needs with the mental and emotional well-being of the team (Ramos, Ferreira, & Barceló, 2011).</p>
-
-    <h2>The Broader Lesson for Future Engineers.</h2>
-
-    <p>No life cycle model is universally best. Each fits different human and project needs. The wisest engineers match their model to the realities and values of the people involved. Projects are as much about human hopes and fears as technical challenges. Success is not just about meeting requirements. It’s about whether the team survives and thrives.</p>
-
-    <p>As I get ready to graduate, I take this lesson forward. The frameworks I choose will define the daily lives of my future colleagues. Life cycle models are more than textbook diagrams—they are promises about how we will treat each other when things go wrong. If we focus only on technical efficiency, we ignore the most important system component: the human being. Prioritizing learning, psychological safety, and shared accountability creates systems that are technically strong and humanly sustainable.</p>
-
-    <footer class="article-footer">
-        <h3>Sources</h3>
-        <p>Holt, J., & Weilkiens,T. (2023). <em>Systems Engineering Demystified</em> (2nd ed.). Packt Publishing.</p>
-        <p>Edmondson, A. (1999). Psychological safety and learning behavior in work teams. <em>Administrative Science Quarterly</em>.</p>
-        <p>Alami, A., & Ernst, N. (2024). Understanding the building blocks of accountability in software engineering. <em>2024 IEEE/ACM 17th International Conference</em>.</p>
-        <p>Ramos, A. L., Ferreira, J.V., & Barceló, J. (2011). <em>Model-based systems engineering tools</em>. SciTePress.</p>
+    <footer class="references">
+        <h2>References</h2>
+        <div class="reference-item">Fitts, P. M. (1954). The information capacity of the human motor system in controlling the amplitude of movement. <i>Journal of Experimental Psychology</i>, 47(6), 381–391. https://doi.org/10.1037/h0055392</div>
+        <div class="reference-item">Hick, W. E. (1952). On the rate of gain of information. <i>Quarterly Journal of Experimental Psychology</i>, 4(1), 11–26. https://doi.org/10.1080/17470215208416600</div>
+        <div class="reference-item">IDEO. (2015). <i>The field guide to human-centered design: Design kit</i>. IDEO.org.</div>
+        <div class="reference-item">ISO. (2018). <i>ISO 9241-210:2018 ergonomics of human-system interaction — Part 210: Human-centred design for interactive systems</i>. International Organization for Standardization.</div>
+        <div class="reference-item">Miller, G. A. (1956). The magical number seven, plus or minus two: Some limits on our capacity for processing information. <i>Psychological Review</i>, 63(2), 81–97. https://doi.org/10.1037/h0043158</div>
+        <div class="reference-item">Nielsen, J. (1994). <i>Usability engineering</i>. Academic Press.</div>
     </footer>
 </article>
-
-</body>
-         <!-- Module 2.1 Blog Post Starts here -->
-
          <!-- Module 2.2 Blog Post Starts here -->
 
          <!-- Module 2.3 Blog Post Starts here -->
