--- a/rogersj/index.html
+++ b/rogersj/index.html
@@ -174,7 +174,147 @@ In the end, life cycle thinking changes the mindset entirely. It pulls focus awa
 
          </article>
 
-         <!-- Module 2.1 Blog Post Starts here -->
+         <section>
+  <h2>Designing for People, Not Just Interfaces</h2>
+
+  <p>
+    Designing for people sounds simple. Almost too simple. Like something everyone agrees with and then immediately forgets. In reality, it is one of the hardest things to actually do well. Most people do not open a website or app thinking about design. They open it because they need something. Directions. Information. A task done fast. Maybe they are already frustrated before they even arrive. That context matters more than most interfaces acknowledge.
+  </p>
+  <p>
+    Users do not show up calm and curious. They show up distracted. Tired. Rushing. Sometimes annoyed. Sometimes confused. Human centered design starts by accepting that reality instead of designing for an ideal, focused user who does not really exist. It shifts the question away from what the system can do and toward how the system feels to use. That shift changes everything.
+  </p>
+
+  <p>
+    Before a user reads a single word, their brain is already working. Scanning. Judging. Guessing. What looks clickable. What looks important. What looks familiar. Perception happens fast. Faster than logic. Design either helps that process or fights it. There is not much middle ground.
+  </p>
+    <p>
+    Human centered design is not about decoration. It is about respect. Respect for how humans see, think, remember, and decide. When designers ignore perception and cognition, interfaces feel heavy. Slow. Annoying. When designers understand them, the experience feels natural. Almost invisible. And honestly, that is usually the goal.
+  </p>
+
+  <h2>Human Centered Design Through ISO 9241 210</h2>
+
+  <p>
+    Human centered design as defined by ISO 9241 210 focuses on understanding users, their tasks, and their environments, involving users throughout development, and refining solutions through evaluation and feedback. It is formal. Structured. Very intentional. And for good reason. Large systems break when design decisions are made casually. ISO treats human centered design as a process that must be documented, tested, and improved over time.
+  </p>
+  <p>
+    This approach makes sense in environments where mistakes are costly. Healthcare. Finance. Enterprise systems. Consistency matters. Traceability matters. You cannot rely on vibes alone. ISO gives teams a shared language and a repeatable framework. It slows things down in a good way. Forces reflection.
+  </p>
+
+  <h2>IDEO and Designing With Empathy</h2>
+
+  <p>
+    IDEOs Field Guide to Human Centered Design feels very different. Almost like the opposite at first glance. It starts with people instead of processes. With stories instead of standards. IDEO pushes designers to go into the field, observe behavior, listen without interrupting, and notice what users struggle to explain. It values empathy over assumptions. Curiosity over certainty.
+  </p>
+<p>
+    The IDEO approach feels messy sometimes. And that is kind of the point. Real life is messy. Users do not follow scripts. They improvise. They adapt. They make mistakes. IDEO encourages rapid prototyping not because prototypes are perfect, but because they reveal truths faster than discussions ever will.
+  </p>
+
+  <p>
+    These two approaches are not competing. They need each other. ISO provides structure and accountability. IDEO provides humanity and insight. One without the other usually fails. Structure without empathy becomes rigid. Empathy without structure becomes chaotic. Good design lives in the balance.
+  </p>
+
+  <h2>Perception and Visual Hierarchy</h2>
+
+  <p>
+    Perception is where most experiences succeed or fail. Not after a user learns the system. Right at the beginning. Users form impressions in seconds. Sometimes less. They decide if something feels trustworthy. Or confusing. Or overwhelming. Before they fully understand anything.
+  </p>
+
+  <p>
+    Visual hierarchy plays a massive role here. It quietly tells users what matters. What can wait. Where to start. Size. Color. Contrast. Spacing. Alignment. These choices are not neutral. They shape attention. When hierarchy is clear, users feel guided. When it is not, users feel lost even if all the right content is technically present.
+  </p>
+
+  <p>
+    Think about a page where every button looks the same. Same size. Same color. Same emphasis. The user stops. Not because they are thinking deeply. But because they are unsure. That pause costs energy. Now imagine that hesitation happening over and over. That is how small design decisions turn into frustration.
+  </p>
+
+  <p>
+    Good visual hierarchy reduces thinking. And reducing thinking is not insulting to users. It is respectful. Users want to move forward, not analyze layouts. Clear design gives momentum.
+  </p>
+
+  <h2>Jakobs Law and Familiarity</h2>
+    <p>
+    Jakob’s Law explains why familiarity matters so much. Users spend most of their time on other websites and apps. They bring those experiences with them. They expect navigation to behave a certain way. Icons to mean certain things. Layouts to feel familiar. When a design follows those conventions, users relax. When it does not, users hesitate.
+  </p>
+
+  <p>
+    Designers sometimes confuse novelty with innovation. They are not the same. Reinventing common patterns often creates friction instead of value. Familiarity builds trust. Trust makes systems easier to use. Jakob’s Law is less about being boring and more about being considerate.
+  </p>
+
+  <h2>Fitts’s Law and Physical Interaction</h2>
+
+  <p>
+    Fitts’s Law reminds designers that interaction is physical, not just mental. The time it takes to click or tap something depends on how big it is and how far away it is. Bigger targets are easier. Closer targets are faster. This seems obvious until it is ignored.
+  </p>
+
+  <p>
+    On mobile especially, small buttons create problems. Missed taps. Accidental clicks. Repeated attempts. Each one feels minor. Together they become irritating. Users do not blame the law. They blame the product. Good design quietly reduces effort. Users may never notice, and that is fine.
+  </p>
+
+  <h2>Hick’s Law and Decision Making</h2>
+
+  <p>
+    Hick’s Law focuses on choice. More options increase decision time. Sometimes so much that users stop deciding at all. This shows up everywhere. Long menus. Overloaded dashboards. Forms with too many fields. What starts as flexibility turns into overwhelm.
+  </p>
+  <p>
+    Designers often want to give users control. That intention is good. The execution often is not. Too many choices at once feels heavy. Good design organizes options. Groups them. Reveals them gradually. One step at a time. Users want progress, not possibilities.
+  </p>
+
+  <h2>Miller’s Law and Cognitive Limits</h2>
+
+  <p>
+    Miller’s Law addresses memory. Humans can only hold a limited amount of information in working memory. When interfaces dump too much information at once, comprehension drops. Errors increase. Confidence drops too.
+  </p>
+
+  <p>
+    This is why chunking matters. Breaking content into sections. Grouping related ideas. Using spacing to separate steps. These choices support the brain. They are not aesthetic preferences. They are cognitive tools.
+  </p>
+
+  <p>
+    When design respects mental limits, users feel capable. When it does not, users feel overwhelmed. Sometimes even stupid. That emotional response is real and it sticks.
+  </p>
+  <h2>Empathy in Human Centered Design</h2>
+
+  <p>
+    Empathy is what ties all of this together. It is easy to design for yourself. It is harder to design for someone tired, distracted, stressed, or unfamiliar with technology. Empathy forces designers to step outside their own expertise and remember what it feels like to not know.
+  </p>
+
+  <p>
+    Empathy is not about being nice. It is about being accurate. A design that works perfectly in a quiet room may fail completely in the real world. On a phone. In a hurry. Under pressure. Empathetic design anticipates those conditions instead of reacting to them later.
+  </p>
+
+  <p>
+    ISO builds empathy through structured research and evaluation. IDEO builds empathy through immersion and observation. Different paths. Same destination. Understanding people before building solutions.
+  </p>
+
+  <h2>Designing for People Is Designing for Success</h2>
+  <p>
+    Designing for people means accepting imperfection. Users make mistakes. They misunderstand things. They skim. They forget. Good design plans for that instead of punishing it.
+  </p>
+
+  <p>
+    It also means designing with humility. Designers are not the user. They never fully will be. The goal is not control. It is support.
+  </p>
+
+  <p>
+    When human centered design is done well, technology fades into the background. The interface does not demand attention. It enables action. Visual hierarchy guides perception. UX laws explain behavior. Empathy connects it all.
+  </p>
+
+  <p>
+    Designing for people is not a trend. It is a responsibility. Systems that respect human perception, attention, and emotion are easier to use, more trustworthy, and more effective. And in the end, that is what good design is supposed to be.
+  </p>
+</section>
+<footer>
+  <h3>References</h3>
+  <ul>
+    <li>IDEO. (2015). <em>The field guide to human-centered design</em>. https://www.designkit.org</li>
+    <li>International Organization for Standardization. (2019). <em>ISO 9241-210: Human-centred design for interactive systems</em>.</li>
+    <li>Nielsen Norman Group. (2020). Jakob’s law. https://www.nngroup.com/articles/jakobs-law/</li>
+    <li>Interaction Design Foundation. (2023). UX laws. https://www.interaction-design.org</li>
+  </ul>
+</footer>
+
+
+
 
          <!-- Module 2.2 Blog Post Starts here -->
 
