--- a/clarkb/index.html
+++ b/clarkb/index.html
@@ -116,7 +116,61 @@
             </footer>
          </article>
          <!-- Module 2.1 Blog Post Starts here -->
-
+         <article>
+            <header class="article-header">
+               <h2>Designing for the People</h2>
+            </header>
+            <h3>Why Design Begins with the Mind</h3>
+            <p>“Designing with people in mind” sounds obvious to some, it even sounds redundant. Why else would one design for anyone else? History tells us otherwise, with poor design choices, confuding interfaces or navigations, and an overall frustration in digital environments. Most designs end up prioritizing technology, a certain aesthetic, or maybe efficency that detaches it from its human audience. Human-centered design choices and changes become a challenge by insinuating that effective designs start with people, and not systems.</p>
+            <p>Aligning the mindset to design for people involves a simple truth, humans are not machines. They are not rational, nor do they have perfect attentiveness, nor are they infinitely patient. Humans are shaped by limits in cognition, visual biases, emotions, habits and more. Once designers have a grasp of that, how perception can be used, how to direct attention, and how empathy can inform decision making, experiences can feel more intuitive rather than instructional. Human-centered does not have users adapts to systems, but rather, the opposite.</p>
+            <p>This post will explore what it truly means to actualy “design for people” by utlizing and examining the principles of human-centered design. This post will show perspectives from ISO 9241-210 and IDEO, while appling inights of perception, visual hierarchy, and the psychology of cognition. Pulling from the four UX laws, from Jakob’s, Fitts’s, Hicks’s, and Miller’s, this post argues that good design is an act of empathy and grounded with science.</p>
+            <h3>Human-Centered Design</h3>
+            <p>The idea of a “human-centered design” (HCD) is that it prioritizes the users needs, limits, contexts, and more, at the forefront of the design process. Rather than looking at usability and accessibility like an afterthought it is an integral portion and influence of the design process by implementing user understanding and evalution.</p>
+            <p>In ISO 9241-210, human-centered design is referred to as an “approach to systems design and development that aims to make interactive systems more usable by focusing on the use of the system and applying human factors and ergonomics knowledge” (ISO, 2019). The definition is an emphasis on usability, efficiency, effectiveness, and more while keeping the importance of human behavior in mind.</p>
+            <p>To contrast, IDEO’s Field Guide to Human-Centered Design looks at HCD as more of a mindset rather than a standard. IDEO put and emphasis on empathy, immersion, and storytelling in the user’s experiences. Rather than starting the design process with requirements and/or constraints, the design process begins with observations, watching how their users behave, hearing their frustrations , and discovering possible needs that might not be expressed directly (IDEO, 2015).</p>
+            <p>Both perspectives have their own idea of the human experience and how to prioritize it. However, there are differences: ISO provides a structured framework, suitable for large organizations and environments with regulations. IDEO offers a much more creative and explorable approach to HCD, valuing emotional insight and experimentation. Both of these perspectives suggest that design with people in mind involves rigor and empathy, while measuring usability outcomes and deep human oriented understanding.</p>
+            <h3>Perception and Attention</h3>
+            <p>Something that is overlooked in the design process is that users tend to experience interfaces visually before they experience it cognitively. Perception precedes and comes before comprehension. If users cannot comprehend or determine where and what to look for, usability crumbles before it even starts.</p>
+            <p>In Designing the with Mind in Mind, Johnson explains that human perception is built on selectiveness and goal orientation (Johnson, 2020). Users do not scan an interface evenly or consistently; rather, they look for visual cues that show relevancy. Contrast, color, spacing, size, and other elements are all influential parts that draw attention. This is an instance where visual heirarchy becomes crucial.</p>
+            <p>To give an example, on a sign in screen, if the “Create Account” button is much more prominent than the “Sign In” button, users could possibly make errors, specifically returning ones. The functionality is not the issue, it is the perception. Visual hierarchy translates into priority and importance, when it conflicts with users and their intent, it ends up causing friction. </p>
+            <p>This visual principle connects to Jakob’s Law, stating that most users spend most of their time on other websites and have an expectation for new designs to work similar to familiar ones (Laws of UX, 2020). When established patterns are disrupted by designers, users need to relearn behaviors, which ends up increasing effort in cognition. Designing in terms of perception involves leveraging familiarity, rather than fighting against it.</p>
+            <h3>Visual Hierarchy</h3>
+            <p>Visual Hierarchy isn’t decoration, it is visual instruction. Through hierarchy, design can guide users’ eyes, reduce decision-making, and clarify relationships. Effective use of visual hierarchy allows users to answer critical questions like: Where am I? What can I do here? What can I do next?</p>
+            <p>In digital interfaces, hierarchy is often conveyed through:</p>
+            <ul>
+               <li>Size and Scale (larger elements are seen as more important)</li>
+               <li>Color and Contrast (bright and bold elements draw more attention)</li>
+               <li>Whitespace (seperation can clarify grouping)</li>
+               <li>Typography (headings can signal structure)</li>
+            </ul>
+            <p>These principles are in alignment with Miller’s Law, which suggestes that a person can hold seven (give or take) items in their working memory (Laws of UX, 2020). By chunking information together visually, designers can help reduce cognitive strain and visual overload. To compare, a giant navigation bar with fifteen different options could force users to overthink, while a hierarchy that group scategories together could let users recognize, as opposed to recalling.</p>
+            <p>Johnson empahasizes that recogntion is much easier than recalling. VIsual hierarchy allows support to recognition by making visual structure. When a hierarchy is absent, users will have to mentally organize information themselves, leading to possible error and fatigue (Johnson, 2020).</p>
+            <h3>Decision-Making and Cognition Load</h3>
+            <p>Decisions in designs aren’t neutral, they either impede or accelerate a user’s action. Hick’s Law states that the time it takes to make decisions increases with the more complex and number of choices become available (Laws of UX, 2020). This principle has important implementations and implications for menus, onboarding flows, desture heavy instances, and more. </p>
+            <p>For an example, a camera app showcases every single possible shooting mode on the main screen. While this could look professional or powerful, this could prove to be extremely overwhelming for beginners. A human-centered approach could be prioritizing the simple but most utlized actions on the main screen, and putting the advanced features in a seperate menu or screen. This respects both amateurs and professionals while not compromising usability.</p>
+            <p>IDEO’s Field Guide prioritizes testing and prototyping mostly because designers have poor judgement of complexity. What could feel intuitive to a designer could feel horrible to a user. In the world of design, empathy is not emotional softness, it is cognitive humility. </p>
+            <h3>Interaction and Effort</h3>
+            <p>While most of the UX discussion is focused on the screen, Fitts’s Law serves as a reminder for designers that interaction is as physical as it is cognitive. Fitts’s Law says that the time that’s required to move to a target depends on the distance to and the size of said target (Laws of UX, 2020). Items that are larger, closer, and targets are easy to select.</p>
+            <p>This principle is why most mobile interfaces places the majority of thier most important items towards the bottom of the screen within reach of the user’s thumb. It is also the explanation to why smaller and less contrasted icons can cause frustration, not because of carelessness, but because the design neglects human motor limits.</p>
+            <p>ISO 9241-210 highlights ergonomics as part of usability (ISO, 2019). Designing for people involves accounting for fatigue, needs in accessibility, and real-world usage situations, this includes one-handed usage, motion and/or low attentin environments.</p>
+            <h3>Empathy as a Design Skill</h3>
+            <p>Empathy is often looked at as a soft skill, but in human-centered design, it is incredibly important for capability. Empathy allows designers to compensate fo frustration before it becomes an issue. It allows them to recognize that errors are design failures rather than user failures, and create systems that feel respectful as opposed to feeling demanding from its users.</p>
+            <p>IDEO’s approach looks at empathy as an immersive understanding, observing not just what users do, but why they do it (IDEO, 2015). ISO builds off this by requiring an iterative evaluation based on user feedback (ISO, 2019). Both of these perspectives reinforce the idea that empathy isn’t guesswork and is learned through user engagement.</p>
+            <p>The four UX laws also support this stance on empathy. Jakob’s Law dictates respect towards user habits. Hick’s Law talks about decision fatigue. Miller’s Law talks about memory constraints. All of these laws, at their core, serve as a reminder that humans are finite, and good design choices can respect those limitations.</p>
+            <h3>Designing for People and Designing for Reality</h3>
+            <p>Designing for people is essentially designing for reality, not for ideals. It involves accepting that users could skim, forget, misinterpet, and possibly get distracted, and build systems that work anyway. Human-centered design birdges the gap between psychology and practice, along with empathy and evidence.</p>
+            <p>ISO 9241-210 privodes the necessary structure the ensure that the design is usable and the usability is repeatable. IDEO’s Field Guide provides the right mindset to ensure that a design can stay humane and always remains grounded. Visual hierarchy and perception form how users interact and understand interfaces before they can ever click. The four laws of UX offer guardrails, prevent designers from ever veering too far off the idea and overestimating human capacity.</p>
+            <p>To conclude, designing with people in mind means that the question needs to shift from “Can users figure out how to use this?” to “Why do they have to?” When designs align with the perception and needs for humans, including their perceptions, decisions, and more, usability disappears and experience takes over.</p>
+            <footer class="article-footer">
+               <h3>Sources:</h3>
+               <ol>
+                  <li>IDEO. (2015). The field guide to human-centered design. IDEO.org. https://www.designkit.org/resources/1</li>
+                  <li>International Organization for Standardization. (2019). ISO 9241-210:2019 Ergonomics of human-system interaction—Part 210: Human-centred design for interactive systems. ISO. https://www.iso.org/standard/77520.html</li>
+                  <li>Johnson, J. (2020). Designing with the Mind in Mind: Simple guide to understanding user interface design guidelines (2nd ed.). Morgan Kaufmann.</li>
+                  <li>Yablonski, J. (2020). Laws of UX: Using psychology to design better products & services. O’Reilly Media.</li>
+                  </ol>
+            </footer>
+         </article>
          <!-- Module 2.2 Blog Post Starts here -->
 
          <!-- Module 2.3 Blog Post Starts here -->
